fix: hero section background has wrong width

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,11 +203,16 @@ img {
 }
 
 .hero-section {
+  padding: 0;
+}
+
+.hero-banner {
+  max-width: 1440px;
   background-image: linear-gradient(var(--grey), var(--grey)),
     url("../images/hero.jpg");
-  background-position: center center;
   background-repeat: no-repeat;
-  background-size: 1440px;
+  background-position: center;
+  background-size: cover;
   padding: 188px 0;
 }
 
